<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" tools:context=".ActivityEditControl">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_control_name"
            android:id="@+id/text_control_button_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignBaseline="@+id/editText_control_button_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_control_button_name" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/text_control_button_name"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_control_bounds"
            android:id="@+id/text_control_button_bounds" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignBaseline="@+id/button_control_button_bounds"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_control_edit_field"
            android:id="@+id/button_control_button_bounds"
            android:layout_below="@+id/editText_control_button_name"
            android:layout_toRightOf="@+id/text_control_button_bounds"
            android:layout_toEndOf="@+id/text_control_button_bounds"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/button_control_button_click"
            android:id="@+id/text_control_button_click" android:layout_alignTop="@+id/button_control_button_click"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignBaseline="@+id/button_control_button_click"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_control_edit_field"
            android:id="@+id/button_control_button_click" android:layout_below="@+id/button_control_button_bounds"
            android:layout_toRightOf="@+id/text_control_button_click"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/button_control_button_release"
            android:id="@+id/text_control_button_release"
            android:layout_alignBaseline="@+id/button_control_button_release"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_control_edit_field"
            android:id="@+id/button_control_button_release" android:layout_below="@+id/button_control_button_click"
            android:layout_toRightOf="@+id/text_control_button_release"/>
</RelativeLayout>